# jupiter

./: .dockerignore  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.json  .pylintrc  .readthedocs.yml  Config  Config.docker  Dockerfile  Gemfile  LICENSE  Makefile  README.md  archive_done_tasks.py  collection.py.x  command.py  config.py  create_project.py  init.py  jupiter.sqlite  migratori.sql  mkdocs.yml  output.json  package-lock.json  package.json  pyproject.toml  pytest.ini  pytest_html_report.html  remove_archived_tasks.py  render.yaml  requirements-dev.txt  requirements.txt  sp.json  space_utils.py  upsert_big_plans.py  upsert_tasks.py  vacations.lock.yaml
itests/: conftest.py  pyproject.toml  test_example.py
itests/entities/: __init__.py  conftest.py  test_big_plans.py  test_chores.py  test_docs.py  test_habits.py  test_inbox_tasks.py  test_journal.py  test_metrics.py  test_persons.py  test_projects.py  test_schedule.py  test_smart_lists.py  test_time_plans.py  test_vacations.py  test_working_mem.py
itests/lifecycle/: __init__.py  conftest.py  test_change_password.py  test_close_account.py  test_create_workspace.py  test_login.py  test_logout.py  test_recover_password.py
src/cli/: Config.project  Config.project.docker  Config.project.live  Dockerfile  README.md  jupiter.sqlite  pyproject.toml  session-info
src/cli/jupiter/cli/: __init__.py  jupiter.py  migrator.py  session_storage.py  top_level_context.py
src/cli/tests/: __init__.py
src/core/: README.md  pyproject.toml
src/core/jupiter/core/: __init__.py
src/core/migrations/: alembic.ini  env.py
src/core/migrations/versions/: 2022_02_24_20_33_reset_initial_migrations.py  2022_03_18_23_52_add_the_push_integration_group_table.py  2022_03_24_22_28_add_tables_for_slack_tasks.py  2022_03_24_23_20_modify_inbox_tasks_with_column.py  2022_03_25_18_58_alter_nullable_slack_table.py  2022_03_29_23_36_add_column_notes.py  2022_07_12_22_53_add_collection_item_block_links_table.py  2022_07_23_00_05_add_api_token_to_notion_connection.py  2022_07_23_00_10_backfill_notion_api_token_with_a_dumb_.py  2022_10_22_19_02_add_tables_for_email_tasks.py  2022_10_22_19_04_modify_inbox_tasks_with_email_tasks.py  2023_04_21_00_08_drop_notion_tables.py  2023_04_22_16_29_drop_notion_link_uuid_columns.py  2023_06_01_14_43_add_all_the_user_and_auth_tables.py  2023_06_16_22_47_add_avatar_to_users.py  2023_06_19_14_17_drop_timezone_from_workspace.py  2023_06_19_15_51_drop_key_columns.py  2023_06_19_18_27_update_use_case_invocation_record.py  2023_07_01_23_34_add_feature_flags_column_to_workspace.py  2023_08_05_16_36_add_search_tables.py  2023_08_17_21_48_add_user_feature_flags_column.py  2023_08_18_12_58_add_gamification_scores_tables.py  2023_08_19_19_02_backfill_gamification_tables.py  2023_08_25_08_44_notes_tables.py  2023_08_25_08_49_backfill_notes_collection.py  2023_09_03_17_55_add_period_best_table.py  2023_10_07_23_20_add_inbox_task_and_big_plan_cnt_to_.py  2023_10_07_23_47_add_inbox_task_and_big_plan_cnt_to_.py  2023_10_08_19_21_create_a_new_index_for_stats_by_created_.py  2023_10_14_17_25_add_lucky_puppy_column.py  2023_11_18_19_21_backfill_entities_that_were_archived_.py  2023_11_19_14_10_create_gc_log_tables.py  2023_11_19_14_15_backfill_gc_log_tables.py  2023_11_26_10_46_backfill_notes_properties.py  2023_12_01_15_30_the_gen_tables.py  2023_12_01_15_33_backfill_gen_tables.py  2023_12_02_21_53_backfill_notes.py  2023_12_03_16_59_move_notes_into_separate_tables.py  2023_12_03_19_08_create_index_on_note_source_and_source_.py  2023_12_03_19_13_drop_notes_column.py  (+89 more)
src/core/tests/: __init__.py  test_time_provider.py
src/core/tests/domain/: test_recurring_task_due_at_time_inc.py  test_recurring_task_gen_params.py  test_recurring_task_period.py  test_recurring_task_skip_rule.py  test_sync_target.py  test_tag_name.py  test_timeline.py  test_timezone.py  test_url.py
src/docs/: README.md  index.md  mkdocs.yml  pyproject.toml  tutorial.md
src/docs/concepts/: big-plans.md  chores.md  clients.md  inbox-tasks.md  metrics.md  persons.md  smart-lists.md  vacations.md  workspaces.md
src/docs/material/: features.md  index.md  roadmap.md  tutorial.md
src/docs/material/assets/: stylesheet.css
src/docs/material/concepts/: accounts.md  archival-and-removal.md  big-plans.md  calendar.md  chores.md  clients.md  garbage-collection.md  habits.md  home-page.md  hosted-vs-local-mode.md  hosting-options.md  inbox-tasks.md  journals.md  metrics.md  overview.md  persons.md  projects.md  smart-lists.md  stats.md  tasks-generation.md  time-plans.md  vacations.md  workspaces.md
src/docs/material/how-tos/: do-garbage-collection.md  install.md  recover-your-account.md  self-hosting.md
src/docs/material/releases/: version-0.0.1.md  version-0.0.2.md  version-0.1.0.md  version-0.1.2.md  version-0.1.3.md  version-0.4.2.md  version-0.6.1.md  version-1.0.3.md  version-1.0.4.md  version-1.0.6.md  version-1.1.0.md  version-1.1.1.md  version-1.1.2.md  version-1.1.3.md  version-1.1.4.md  version-1.2.0.md  version-1.3.0.md
src/docs/material/tools/: pomodoro-timer.md
src/docs/releases/: version-0.0.4.md  version-0.1.2.md  version-0.1.6.md  version-0.10.0.md  version-0.4.2.md  version-0.5.1.md  version-0.6.0.md  version-0.8.0.md  version-0.9.0.md
src/webapi/: Config.project  Config.project.docker  Config.project.live  Dockerfile  README.md  jupiter.sqlite  pyproject.toml
src/webapi/jupiter/webapi/: __init__.py  app.py  exceptions.py  jupiter.py  time_provider.py  websocket_progress_reporter.py
src/webapi/tests/: __init__.py
tests/: README.md  __init__.py  pyproject.toml
tests/integration/: Config.test  infra.py  test_gc.py  test_gen.py  test_init.py  test_report.py  test_sync.py
tests/integration/crud/: __init__.py  test_big_plan.py  test_chore.py  test_email_task.py  test_habit.py  test_inbox_task.py  test_metric.py  test_person.py  test_project.py  test_slack_task.py  test_smart_list.py  test_vacation.py  test_workspace.py
tests/unit/domain/: __init__.py
tests/unit/utils/: __init__.py  test_time_provider.py
(+3211 files in other folders)
