[tool.poetry]
name = "jupiter"
version = "0.1.0"
description = """Jupiter is a small tool for _life planning_. It provides goals management,
task tracking, habit building, chores management, smart lists, metrics, a personal relationship manager, etc.
all in a unified package."""
authors = ["Horia Coman <horia141@gmail.com>"]
license = "MIT"
homepage = "https://jupiter-goals.readthedocs.io/"
readme = "README.md"
repository = "https://github.com/horia141/jupiter"
documentation = "https://jupiter-goals.readthedocs.io/"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
notion = { git = "https://github.com/horia141/notion-py", branch = "dont-update-views" }
pendulum = "2.0.5"
python-dotenv = "0.20.0"
pytz = "2022.1"
requests = "2.27.1"
SQLAlchemy = "1.4.34"
alembic = "1.7.7"
coverage = "6.3.2"
emoji = "1.7.0"
rich = "^12.4.4"

[tool.poetry.dev-dependencies]
pylint = "2.13.4"
yamllint = "1.26.3"
pyflakes = "2.5.0"
bandit = "1.7.4"
pydocstyle = "6.1.1"
vulture = "2.6"
mkdocs = "1.4.1"
mypy = "0.942"
types-requests = "2.27.16"
icecream = "2.1.2"
black = "22.3"
pathspec = "0.9.0"
click = "8.0.0"
selenium = "4.1.3"
webdriver-manager = "3.5.4"
libyear = "0.2.1"
pytest = "7.1.2"
pytest-html-reporter = "0.2.9"
pyinstaller = "5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
