[tool.poetry]
package-mode = false
name = "jupiter"
version = "0.1.0"
description = "Thrive is a small tool for _life planning_."
authors = ["Horia Coman <horia141@gmail.com>"]
license = "MIT"
homepage = "https://get-thriving.com/"
readme = "README.md"
repository = "https://github.com/horia141/jupiter"
documentation = "https://docs.get-thriving.com/"

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
yamllint = "^1.36.2"
pyflakes = "^3.2.0"
bandit = "^1.8.3"
pydocstyle = "^6.3.0"
vulture = "^2.14"
mypy = "^1.15.0"
black = "^25.1.0"
pytest = "^8.3.5"
pytest-html-reporter = "^0.2.9"
pillow = "^11.1.0"
httpie = "^3.2.4"
autoflake = "^2.3.1"
ruff = "^0.4.0"
watchfiles = "^1.0.4"
openapi-python-client = "^0.24.1"
randomname = "^0.2.1"
pip-audit = "^2.8.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
