[tool.poetry]
name = "jupiter-cli"
version = "0.1.0"
description = "A CLI client for Jupiter."
authors = ["Horia Coman <horia141@gmail.com>"]
license = "MIT"
homepage = "https://jupiter-goals.readthedocs.io/"
readme = "README.md"
repository = "https://github.com/horia141/jupiter"
documentation = "https://jupiter-goals.readthedocs.io/"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
rich = "12.4.4"
jupiter-core = {path = "../core", develop = true}
pydantic = "^1.10.3"

[tool.poetry.dev-dependencies]
types-requests = "2.27.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
