[tool.poetry]
package-mode = false
name = "jupiter-cli"
version = "0.1.0"
description = "A CLI client for Thrive."
authors = ["Horia Coman <horia141@gmail.com>"]
license = "MIT"
homepage = "https://get-thriving.com"
readme = "README.md"
repository = "https://github.com/horia141/jupiter"
documentation = "https://docs.get-thriving.com"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
jupiter-core = {path = "../core", develop = true}
rich = "^13.9.4"
simpleaudio = "^1.0.4"
beepy = "^1.0.7"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
