[tool.poetry]
name = "jupiter-core"
version = "0.1.0"
description = "The core business logic for Jupiter."
authors = ["Horia Coman <horia141@gmail.com>"]
license = "MIT"
homepage = "https://jupiter-goals.readthedocs.io/"
readme = "README.md"
repository = "https://github.com/horia141/jupiter"
documentation = "https://jupiter-goals.readthedocs.io/"
packages = [{ include = "jupiter" }]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
pendulum = "=2.1.2"
python-dotenv = "0.20.0"
pytz = "2022.1"
requests = "2.31.0"
SQLAlchemy = "1.4.35"
alembic = "1.7.7"
coverage = "6.3.2"
emoji = "1.7.0"
rich = "12.4.4"
email-validator = "1.3.0"
pydantic = "^1.10.3"
aiosqlite = "^0.18.0"
greenlet = "^2.0.1"
validators = "^0.20.0"
aiohttp = "^3.8.4"
aiodns = "^3.0.0"
argon2-cffi = "^21.3.0"
pyjwt = "^2.7.0"
avinit = "^1.3.0"

[tool.poetry.dev-dependencies]
types-requests = "2.27.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
