[tool.poetry]
name = "jupiter-core"
version = "0.1.0"
description = "The core business logic for Thrive."
authors = ["Horia Coman <horia141@gmail.com>"]
license = "MIT"
homepage = "https://jupiter-goals.readthedocs.io/"
readme = "README.md"
repository = "https://github.com/horia141/jupiter"
documentation = "https://jupiter-goals.readthedocs.io/"
packages = [{ include = "jupiter" }]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
pendulum = "=2.1.2"
python-dotenv = "0.20.0"
pytz = "2022.1"
requests = "2.27.1"
SQLAlchemy = "1.4.35"
alembic = "1.7.7"
coverage = "6.3.2"
emoji = "1.7.0"
rich = "12.4.4"
email-validator = "^2.1.0"
aiosqlite = "^0.18.0"
greenlet = "^2.0.1"
validators = "^0.20.0"
argon2-cffi = "^21.3.0"
pyjwt = "^2.7.0"
avinit = "^1.3.0"
inflection = "^0.5.1"
typing-extensions = "^4.11.0"
pydantic = "^2.7"
cryptography = "^42.0.5"
icalendar = "^5.0.13"
recurring-ical-events = "^3.3.0"

[tool.poetry.dev-dependencies]
types-requests = "2.27.16"

[tool.poetry.group.dev.dependencies]
types-icalendar = "^5.0.0.20240806"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
