[tool.poetry]
name = "jupiter-core"
version = "0.1.0"
description = "The core business logic for Thrive."
authors = ["Horia Coman <horia141@gmail.com>"]
license = "MIT"
homepage = "https://get-thriving.com"
readme = "README.md"
repository = "https://github.com/horia141/jupiter"
documentation = "https://docs.get-thriving.com"
packages = [{ include = "jupiter" }]

[tool.poetry.dependencies]
python = "^3.13"
pendulum = "^3.0.0"
python-dotenv = "^1.0.1"
pytz = "^2025.1"
requests = "^2.32.3"
SQLAlchemy = "^2.0.39"
alembic = "^1.15.1"
coverage = "^7.7.0"
emoji = "^2.14.1"
rich = "^13.9.4"
email-validator = "^2.2.0"
aiosqlite = "^0.21.0"
greenlet = "^3.1.1"
validators = "^0.34.0"
argon2-cffi = "^23.1.0"
cffi = "^1.17.1"
pyjwt = "^2.10.1"
avinit = "^1.3.0"
inflection = "^0.5.1"
typing-extensions = "^4.12.2"
pydantic = "^2.10.6"
cryptography = "^44.0.2"
icalendar = "^6.1.2"
recurring-ical-events = "^3.6.0"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.0"
types-icalendar = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
