[tool.poetry]
name = "jupiter-docs"
version = "0.1.0"
description = "Docs for Jupiter"
authors = ["Horia Coman <horia141@gmail.com>"]
license = "MIT"
homepage = "https://jupiter-docs.onrender.com/"
readme = "README.md"
repository = "https://github.com/horia141/jupiter"
documentation = "https://jupiter-docs.onrender.com/"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
