[tool.poetry]
package-mode = false
name = "jupiter-docs"
version = "0.1.0"
description = "Docs for Jupiter"
authors = ["Horia Coman <horia141@gmail.com>"]
license = "MIT"
homepage = "https://get-thriving.com"
readme = "README.md"
repository = "https://github.com/horia141/jupiter"
documentation = "https://docs.get-thriving.com"

[tool.poetry.dependencies]
python = "^3.13"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
