[tool.poetry]
package-mode = false
name = "jupiter-webapi"
version = "0.1.0"
description = "A Web RPC-ish API for Thrive."
authors = ["Horia Coman <horia141@gmail.com>"]
license = "MIT"
homepage = "https://get-thriving.com"
readme = "README.md"
repository = "https://github.com/horia141/thrive"
documentation = "https://docs.get-thriving.com"

[tool.poetry.dependencies]
python = "^3.13"
jupiter-core = {path = "../core", develop = true}
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
pydantic = "^2.10.6"
websockets = "^15.0.1"
gunicorn = "^23.0.0"
python-multipart = "^0.0.20"
apscheduler = "^3.11.0"
inflection = "^0.5.1"
aiohttp = "^3.11.14"
wsproto = "^1.2.0"
aiodns = "^3.2.0"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
